-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: None
-
Component/s: hotspot
-
b13
x86_32, arm32:
/pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/gc/shared/c2/barrierSetC2.cpp:722:28: error: expected type-specifier before 'ConvI2LNode'
Node* alloc_size = new ConvI2LNode(size_in_bytes);
^~~~~~~~~~~
Seems to be a missing include. After adding the missing include, starts to fail with:
/home/shade/jdk-jdk/src/hotspot/share/opto/macro.cpp: In member function ‘Node* PhaseMacroExpand::prefetch_allocation(Node*, Node*&, Node*&, Node*, Node*, intx)’:
/home/shade/jdk-jdk/src/hotspot/share/opto/macro.cpp:1730:27: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
for ( uint i = 0; i < lines; i++ ) {
~~^~~~~~~
/home/shade/jdk-jdk/src/hotspot/share/opto/macro.cpp:1783:27: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
for ( uint i = 1; i < lines; i++ ) {
~~^~~~~~~
/home/shade/jdk-jdk/src/hotspot/share/opto/macro.cpp:1799:27: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
for ( uint i = 0; i < lines; i++ ) {
~~^~~~~~~
/pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/gc/shared/c2/barrierSetC2.cpp:722:28: error: expected type-specifier before 'ConvI2LNode'
Node* alloc_size = new ConvI2LNode(size_in_bytes);
^~~~~~~~~~~
Seems to be a missing include. After adding the missing include, starts to fail with:
/home/shade/jdk-jdk/src/hotspot/share/opto/macro.cpp: In member function ‘Node* PhaseMacroExpand::prefetch_allocation(Node*, Node*&, Node*&, Node*, Node*, intx)’:
/home/shade/jdk-jdk/src/hotspot/share/opto/macro.cpp:1730:27: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
for ( uint i = 0; i < lines; i++ ) {
~~^~~~~~~
/home/shade/jdk-jdk/src/hotspot/share/opto/macro.cpp:1783:27: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
for ( uint i = 1; i < lines; i++ ) {
~~^~~~~~~
/home/shade/jdk-jdk/src/hotspot/share/opto/macro.cpp:1799:27: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
for ( uint i = 0; i < lines; i++ ) {
~~^~~~~~~
- relates to
-
JDK-8210829 Modularize allocations in C2
-
- Resolved
-