8210963: Build failures after "8210829: Modularize allocations in C2"

Reviewed-by: rkennke, thartmann